--- a/encrypted_resume.yaml
+++ b/encrypted_resume.yaml
@@ -14,6 +14,24 @@ biography: 'Evans Tucker is a senior Linux systems administrator, probably best 
   long.'
 experience:
 - tags: current story_time
+  title: Site Reliability Engineer
+  location: Portland, OR
+  company: iovation Inc.
+  address: 111 SW 5th Ave Ste 3200
+  city: Portland
+  state: Oregon
+  zip_code: '97204'
+  phone: "+1 (503) 224-6010"
+  url: https://www.iovation.com/
+  supervisor: Aaron Blew
+  start_date: '2017-11-13'
+  end_date: ''
+  starting_compensation: crnQSXi9Uxqu2kAlgnSK8A==
+  ending_compensation: crnQSXi9Uxqu2kAlgnSK8A==
+  description:
+  - Did stuff
+  reason_for_leaving: ''
+- tags: current story_time
   title: Senior Member of Technical Staff
   location: Remote/Telecommute
   company: athenahealth, Inc.
@@ -25,7 +43,7 @@ experience:
   url: http://www.athenahealth.com/
   supervisor: Cameron King
   start_date: '2015-08-31'
-  end_date: 
+  end_date: '2017-11-06'
   starting_compensation: V5syJDpXQpVS7DfSd3eMyA==
   ending_compensation: ez5mHtoEOp+BeKQxIP+K8A==
   description:
@@ -63,7 +81,9 @@ experience:
     team across town, across the country, and globally. I even trained three new U.S.
     colleagues as well as two in Chennai, India. That being said, I am a social person,
     so I'm leaning slightly towards an office-based position for my next job.
-  reason_for_leaving: ''
+  reason_for_leaving: Management did not prioritize maintenance, so tech debt just
+    kept getting worse. Never go to attend training or conferences. Switched teams
+    too many times, which was particularly difficult as a remote employee.
 - tags: current story_time
   title: Systems Administrator
   location: Austin, TX
