--- a/encrypted_resume.yaml
+++ b/encrypted_resume.yaml
@@ -92,7 +92,7 @@ experience:
     colleagues as well as two in Chennai, India. That being said, I am a social person,
     so I'm leaning slightly towards an office-based position for my next job.
   reason_for_leaving: Management did not prioritize maintenance, so tech debt just
-    kept getting worse. Never go to attend training or conferences. Switched teams
+    kept getting worse. Never got to attend training or conferences. Switched teams
     too many times, which was particularly difficult as a remote employee.
 - tags: current story_time
   title: Systems Administrator
