--- a/encrypted_resume.yaml
+++ b/encrypted_resume.yaml
@@ -23,11 +23,11 @@ experience:
   zip_code: '11206'
   phone: "+1-646-598-6376"
   url: https://www.consensys.net/
-  supervisor:
+  supervisor: 
   start_date: '2020-08-17'
   end_date: ''
   starting_compensation: yL/xhRZC7P8rcQgENl0uFQ==
-  ending_compensation: gPZP8ocWH2jajQ9cJwdZPA==
+  ending_compensation: kf1NzFGx8U18ibb8tedv/w==
   description:
   - Same shit, new company name.
 - tags: current story_time
@@ -103,17 +103,31 @@ experience:
   - unleash
   - worked with Metamask team, spoke with PWC about security needs SOC2 etc.?
   - yak shaving
-
-  - Joined ConsenSys in April 2018 on the Balanc3 project, transitioned to Meridio, and was the lone DevOps person supporting multiple teams that eventually coalesced into the Codefi group.
-  - Currently specialized in architecting containerized solutions on Kubernetes using Helm, and building CI/CD workflows.
+  - Joined ConsenSys in April 2018 on the Balanc3 project, transitioned to Meridio,
+    and was the lone DevOps person supporting multiple teams that eventually coalesced
+    into the Codefi group.
+  - Currently specialized in architecting containerized solutions on Kubernetes using
+    Helm, and building CI/CD workflows.
   - Advocate for a DevSecOps culture prioritizing infosec and compliance.
-  - Experience and enthusiasm for building decentralized architectures using self-hosted free open source software and P2P protocols like IPFS.
-  - Airswap: “peer-to-peer trading through a suite of apps and tools that are free and easy to use.” Migrated some services to a new AWS account and new Kubernetes cluster.
-  - Activate: “buy, use, and manage your utility tokens.” Refined CI/CD pipelines, improved code auditing and security scanning.
-  - Codefi: “blockchain application suite powering commerce and finance.” Built new multi-tenant clusters and CI/CD pipelines in US and EU to support multiple teams and projects.
-  - Assets: deployed new Kubernetes clusters and our Assets suite of applications for a real estate private equity platform.
-  - Meridio: “create and invest in shares of individual properties on the blockchain.” Migrated expensive AWS ECS clusters to Kubernetes. Deployed several whiteboxed versions of this platform for various clients.
-  - Balanc3: “financial management for digital assets.” Updated custom Ansible-based Kubernetes clusters to most popular community-supported tool at the time, kops. Also migrated all custom deployments to Helm. Significantly reduced the cost of the clusters as well by consolidating and performance tuning.
+  - Experience and enthusiasm for building decentralized architectures using self-hosted
+    free open source software and P2P protocols like IPFS.
+  - Airswap: "“peer-to-peer trading through a suite of apps and tools that are free
+      and easy to use.” Migrated some services to a new AWS account and new Kubernetes
+      cluster."
+  - Activate: "“buy, use, and manage your utility tokens.” Refined CI/CD pipelines,
+      improved code auditing and security scanning."
+  - Codefi: "“blockchain application suite powering commerce and finance.” Built new
+      multi-tenant clusters and CI/CD pipelines in US and EU to support multiple teams
+      and projects."
+  - Assets: deployed new Kubernetes clusters and our Assets suite of applications
+      for a real estate private equity platform.
+  - Meridio: "“create and invest in shares of individual properties on the blockchain.”
+      Migrated expensive AWS ECS clusters to Kubernetes. Deployed several whiteboxed
+      versions of this platform for various clients."
+  - Balanc3: "“financial management for digital assets.” Updated custom Ansible-based
+      Kubernetes clusters to most popular community-supported tool at the time, kops.
+      Also migrated all custom deployments to Helm. Significantly reduced the cost
+      of the clusters as well by consolidating and performance tuning."
 - tags: current story_time
   title: Site Reliability Engineer
   location: Portland, OR
@@ -203,7 +217,7 @@ experience:
   city: Austin
   state: Texas
   zip_code: '78731'
-  phone:
+  phone: 
   url: http://www.indeed.com/
   supervisor: Jason Koppe
   start_date: '2013-11-25'
@@ -382,14 +396,14 @@ experience:
   - Developed and implemented disaster recovery procedures.
   - Responded to system alerts 24 hours a day, 7 days a week.
   reason_for_leaving: Winternals was acquired by Microsoft.
-- tags:
+- tags: 
   title: Assistant Catastrophe Adjuster
   location: Norfolk, VA
   company: Martin Arguello
-  address:
+  address: 
   city: Norfolk
   state: Virginia
-  zip_code:
+  zip_code: 
   phone: "+1-979-255-5003"
   url: mailto:arguello@earthlink.net
   supervisor: Martin Arguello
@@ -405,7 +419,7 @@ experience:
   - Sketched roof, siding, and interior diagrams and measured damaged areas.
   - Performed the various office duties needed to close the policy holders' files.
   reason_for_leaving: Position was temporary.
-- tags:
+- tags: 
   title: CSD Network Tech/Specialist
   location: Round Rock, TX
   company: Dell Corporation
@@ -427,7 +441,7 @@ experience:
   - Administered Dell's internal Precision Workstation website.
   reason_for_leaving: Dell offered me another, better phone support position, but
     I didn't want to be on the phones anymore.
-- tags:
+- tags: 
   title: Technical Support
   location: Bryan, TX
   company: DecisionOne
@@ -447,14 +461,14 @@ experience:
   - Provided tech support for Covad DSL and T1 lines.
   - Performed customer service duties for both of the companies above.
   reason_for_leaving: Moved to Dallas.
-- tags:
+- tags: 
   title: Assistant Catastrophe Adjuster
   location: Omaha, NE
   company: Martin Arguello
-  address:
+  address: 
   city: Omaha
   state: Nebraska
-  zip_code:
+  zip_code: 
   phone: "+1-979-255-5003"
   url: mailto:arguello@earthlink.net
   supervisor: Martin Arguello
@@ -469,7 +483,7 @@ experience:
   - Sketched roof and siding diagrams and measure damaged areas.
   - Performed the various office duties needed to close the policy holders' files.
   reason_for_leaving: Position was temporary.
-- tags:
+- tags: 
   title: Consultant
   location: Madison, WI
   company: Exacta Corporation
@@ -495,7 +509,7 @@ experience:
     Company.
   - Performed various troubleshooting tasks on the SOC's LAN.
   reason_for_leaving: Moved back to Texas.
-- tags:
+- tags: 
   title: Technical Support
   location: San Antonio, TX
   company: Texas.Net
@@ -514,7 +528,7 @@ experience:
   - Provided phone and e-mail tech support for dial-up and DSL connections.
   - Provided customer service for business and residential accounts.
   reason_for_leaving: Obtained a web programming position at Exacta.
-- tags:
+- tags: 
   title: Hardware Technician
   location: San Antonio, TX
   company: Amenity Computer Services
@@ -541,7 +555,7 @@ experience:
     in the wrong position, partially inserted cards, cables plugged in backwards,
     bent pins, etc. I got it working pretty quickly and he hired me on the spot.
   reason_for_leaving: Found a better position at Texas.Net.
-- tags:
+- tags: 
   title: Technical Support Volunteer
   location: Waco, TX
   company: TSTC Student Online Services
@@ -563,7 +577,7 @@ experience:
   - Provided phone tech support for TSTC's online services.
   - Administered several web and file servers.
   reason_for_leaving: Wanted to take more classes.
-- tags:
+- tags: 
   title: Sandwich Artist
   location: College Station, TX
   company: Subway
@@ -584,7 +598,7 @@ experience:
   - Cleaned.
   - Closed the store and completed inventory and safe-deposit paperwork.
   reason_for_leaving: Went back to college.
-- tags:
+- tags: 
   title: Express Associate
   location: Waco, TX
   company: Express Personnel Services
@@ -594,7 +608,7 @@ experience:
   zip_code: '76710'
   phone: "+1-254-776-3302"
   url: http://www.expresspersonnel.com/
-  supervisor:
+  supervisor: 
   start_date: '1996-11-01'
   end_date: '1996-11-30'
   starting_compensation: 2XpwFZ2XfmiBejJb0L6kgA==
@@ -603,7 +617,7 @@ experience:
   - Performed some simple assembly line work at a medical supplies factory.
   - Engaged in some outdoor manual labor at a sheetrock company.
   reason_for_leaving: They didn't provide enough jobs.
-- tags:
+- tags: 
   title: Maintenance Crew
   location: Bryan, TX
   company: 50 Off Store
@@ -611,8 +625,8 @@ experience:
   city: Bryan
   state: Texas
   zip_code: '77802'
-  phone:
-  url:
+  phone: 
+  url: 
   supervisor: Mr. Bush
   start_date: '1996-05-10'
   end_date: '1996-06-07'
@@ -624,7 +638,7 @@ experience:
   - Executed astounding janitorial feats on the store's lavatory.
   reason_for_leaving: Manager yelled at everyone all the time. Level of abuse far
     exceeded pay.
-- tags:
+- tags: 
   title: Sandwich Artist
   location: Bryan, TX
   company: Subway
@@ -642,7 +656,7 @@ experience:
   description:
   - "(See the Subway entry above.)"
   reason_for_leaving: Left for college.
-- tags:
+- tags: 
   title: Customer Service Representative
   location: Bryan, TX
   company: McDonald's
@@ -713,7 +727,7 @@ education:
   phone: "+1-979-731-7855"
   url: http://www.bryanisd.org/school.asp?schoolID=9
   degree: High School Diploma
-  major:
+  major: 
   start_date: '1995'
   end_date: '1995'
   achievements:
@@ -730,7 +744,7 @@ education:
   phone: "+1-979-731-7400"
   url: http://www.ci.bryanisd.org/bryanhs/
   degree: Incomplete
-  major:
+  major: 
   start_date: '1991'
   end_date: '1995'
   achievements:
