--- a/encrypted_resume.yaml
+++ b/encrypted_resume.yaml
@@ -1,133 +1,57 @@
 ---
 contact:
   name: Evans Tucker
-  phone: "+1-971-336-3223"
-  email: evans.tucker@gmail.com
+  phone: "+1 971-336-3223"
+  email: gmail@evanstucker.com
 biography: 'Evans Tucker is a hardened DevOps Engineer, probably best known for causing
   a brief company-wide outage, but occasionally recognized for his elegant code and
-  excellent process documentation. He practices Agile software development using DevOps,
-  Scrum, and Kanban methodologies. In 2015, he and his family sold almost everything
-  they owned, and moved from Austin, Texas to Portland, Oregon to escape the heat,
-  mosquitoes, and ennui. Evans is a strong advocate for: free and open source software;
-  a decentralized, distributed web; autonomous electric cars; space colonization;
-  and a post-scarcity economy where we can just sit around philosophizing all day
-  long.'
+  excellent process documentation. Evans is a strong advocate for: free and open source
+  software; a decentralized, distributed web; and a post-scarcity economy where we
+  can just sit around philosophizing all day long.'
 experience:
 - tags: current story_time
-  title: DevOps Engineer
+  title: Lead DevOps Engineer
   location: Remote/Telecommute
   company: ConsenSys Software Inc.
   address: '49 Bogart St #22'
   city: Brooklyn
   state: New York
   zip_code: '11206'
-  phone: "+1-646-598-6376"
+  phone: "+1 646-598-6376"
   url: https://www.consensys.net/
-  supervisor: 
-  start_date: '2020-08-17'
-  end_date: ''
+  supervisor: Griffin Anderson, Patrick Berarducci, Lex Sokolin, Didier Le Floch,
+    Bogdan Suvar
+  start_date: 2018-04-18
+  end_date: 2023-02-17
   starting_compensation: yL/xhRZC7P8rcQgENl0uFQ==
   ending_compensation: kf1NzFGx8U18ibb8tedv/w==
   description:
-  - Same shit, new company name.
-- tags: current story_time
-  title: DevOps Engineer
-  location: Remote/Telecommute
-  company: ConsenSys Inc.
-  address: '49 Bogart St #22'
-  city: Brooklyn
-  state: New York
-  zip_code: '11206'
-  phone: "+1-646-598-6376"
-  url: https://www.consensys.net/
-  supervisor: Griffin Anderson, Patrick Berarducci, Lex Sokolin, Didier Le Floch
-  start_date: '2018-04-18'
-  end_date: '2020-08-17'
-  starting_compensation: yL/xhRZC7P8rcQgENl0uFQ==
-  ending_compensation: yL/xhRZC7P8rcQgENl0uFQ==
-  description:
-  - ConsenSys is a global blockchain technology company building the infrastructure,
-    applications, and practices that enable a decentralized world.  It was founded
-    by Joe Lubin, who is also a co-founder of the Ethereum blockchain. Instead of
-    a traditional hierarchy, it's comprised of a venture studio with over 50 autonomous
-    startups; a few alignment circles that govern funding, HR, etc.; and an ever-changing
-    list of other circles that host conferences, provide blockchain education, etc.
-    It's a remote-first company based in New York with offices all around the world.
-    I was hired at one of the startups within ConsenSys named Balanc3. Balanc3 provides
-    financial management for digital assets like cryptocurrency and tokens.
-  - When I started at Balanc3, I was given five Kubernetes clusters that the previous
-    DevOps Engineer deployed to AWS with Terraform and some custom Ansible scripts.
-    I quickly learned how to maintain these clusters and deploy new services to them.
-    On the tenth business day of my employment, my predecessor handed me the admin
-    keys and left Balanc3 to go back into the larger ConsenSys mesh, leaving me as
-    the sole DevOps person for Balanc3. During my first year, I worked with ~20 developers
-    in 3 countries to add ~20 services to our platform, roughly doubling the number
-    of services when I first started.
-  - Meridio, Codefi Activate, Codefi Airswap, Mata Capital, Kaleido, a large bond
-    credit rating business.
-  - auth0
-  - bitcoind
-  - cassandra, timescaledb, mongodb postgresql, redis
-  - cert-manager let's encrypt nginx-ingress external-dns
-  - chartmuseum
-  - cloudflare
-  - dockerfile
-  - elasticStack (elasticsearch, filebeat, kibana)
-  - fluxcd?
-  - github
-  - gitlab CI, Let's Encrypt ACME cert-manager,
-  - gitlab-runner
-  - harbor with trivy
-  - hashicorp vault?
-  - helm
-  - jenkinsfile CI/CD pipeline
-  - keycloak oidc
-  - kong api gateway
-  - kops
-  - kube2iam
-  - linkerd/istio?
-  - metabase
-  - metrics-server
-  - nginx-ingress
-  - node.js create react app (CRA)
-  - oauth2 and oidc
-  - okta
-  - parity
-  - pomerium
-  - prometheus (prometheus-operator) alertmanager grafana
-  - redis
-  - self-organizing
-  - skaffold
-  - sonarqube
-  - sonatype nexus and verdaccio
-  - unleash
-  - worked with Metamask team, spoke with PWC about security needs SOC2 etc.?
-  - yak shaving
-  - Joined ConsenSys in April 2018 on the Balanc3 project, transitioned to Meridio,
-    and was the lone DevOps person supporting multiple teams that eventually coalesced
-    into the Codefi group.
-  - Currently specialized in architecting containerized solutions on Kubernetes using
-    Helm, and building CI/CD workflows.
-  - Advocate for a DevSecOps culture prioritizing infosec and compliance.
-  - Experience and enthusiasm for building decentralized architectures using self-hosted
-    free open source software and P2P protocols like IPFS.
-  - Airswap: "“peer-to-peer trading through a suite of apps and tools that are free
-      and easy to use.” Migrated some services to a new AWS account and new Kubernetes
-      cluster."
-  - Activate: "“buy, use, and manage your utility tokens.” Refined CI/CD pipelines,
-      improved code auditing and security scanning."
-  - Codefi: "“blockchain application suite powering commerce and finance.” Built new
-      multi-tenant clusters and CI/CD pipelines in US and EU to support multiple teams
-      and projects."
-  - Assets: deployed new Kubernetes clusters and our Assets suite of applications
-      for a real estate private equity platform.
-  - Meridio: "“create and invest in shares of individual properties on the blockchain.”
-      Migrated expensive AWS ECS clusters to Kubernetes. Deployed several whiteboxed
-      versions of this platform for various clients."
-  - Balanc3: "“financial management for digital assets.” Updated custom Ansible-based
-      Kubernetes clusters to most popular community-supported tool at the time, kops.
-      Also migrated all custom deployments to Helm. Significantly reduced the cost
-      of the clusters as well by consolidating and performance tuning."
+  - 'For the last five years, I''ve been building, securing, and maintaining Kubernetes
+    clusters and CI/CD pipelines. I''ve deployed Kubernetes to bare metal, AWS EKS,
+    and Azure AKS with a variety of tools including: kubeadm, kubespray, kops, eksctl,
+    Rancher RKE, and Terraform. Services were deployed to the cluster via Helm with
+    tools like Helmfile, Skaffold, Kustomize, and Flux.'
+  - In 2018 and 2019, I was the sole DevOps person managing Kubernetes clusters and
+    databases for the Balanc3, Meridio, Activate, and Airswap projects. I migrated
+    our pipelines from Jenkins to GitLab CI, and started building what would eventually
+    become an extensive library of CI/CD jobs used across the organization.
+  - In 2020, a second DevOps engineer joined newly formed Codefi group. Together,
+    we built infrastructure for the MetaMask Swap service and APIs. As of Nov. 2021,
+    this service enabled more than $10 billion USD in peer-to-peer token swapping,
+    generating $87.5 million in revenue. We did that with a team of just two!
+  - In 2021, in addition to supporting previous projects, I helped launch Palm NFT
+    Studio, which partnered with heni.com to create an interesting NFT project called
+    "The Currency" by artist Damien Hirst.
+  - In 2022 and early 2023, I supported MetaMask's Buy (fiat onramp), Portfolio, Bridge,
+    and Staking products. During this time, we also started working towards SOC2 compliance,
+    which meant we were consolidating and documenting our processes, auditing access,
+    and migrating all infra to AWS SSO, Okta, and Pomerium.
+  - 'Throughout my tenure, I''ve deployed many databases including: Redis, ElastiCache,
+    PostgreSQL, RDS, Prometheus (inc. Alertmanager and Grafana), Elastic Stack (Elasticsearch,
+    Filebeat, Kibana, and APM), MongoDB, MySQL/MariaDB, TimescaleDB, and Cassandra.
+    Also Ethereum blockchain nodes Geth, Hyperledger Besu, Teku, Parity, and Truffle
+    Suite''s Ganache. And finally, bitcoind and IPFS. I also deployed artifact repositories:
+    Chartmuseum, Harbor, Sonatype Nexus, and Verdaccio.'
 - tags: current story_time
   title: Site Reliability Engineer
   location: Portland, OR
@@ -136,7 +60,7 @@ experience:
   city: Portland
   state: Oregon
   zip_code: '97204'
-  phone: "+1-503-224-6010"
+  phone: "+1 503-224-6010"
   url: https://www.iovation.com/
   supervisor: Aaron Blew
   start_date: '2017-11-13'
@@ -150,12 +74,10 @@ experience:
     cluster, and perform a rolling upgrade. I also began deduplicating our collection
     of around forty separate copy/pasted upgrade scripts. I created a POC for a unified,
     generic upgrade process that would work with all of our hosts.
-  - In addition to automation and upgrades, I experimented with Terraform as a way
-    to manage our AWS IAM users and S3 buckets, but it wasn't quite the right tool
-    for that job, so I ended up using AWS Config instead.
   reason_for_leaving: Philosophical differences with tenured coworkers. They wanted
-    consistency, I wanted to innovate. I was formally reprimanded for creating a PR
-    for a CSV file to replace our 40 deploy scripts.
+    me to maintain 40 slightly different copies of a script, and I wanted to pull
+    out common sections into modules and deduplicate the code. I was formally reprimanded
+    for creating a PR to do this work. I resigned.
 - tags: current story_time
   title: Senior Member of Technical Staff
   location: Remote/Telecommute
@@ -164,7 +86,7 @@ experience:
   city: Watertown
   state: Massachusetts
   zip_code: '02472'
-  phone: "+1-800-981-5084"
+  phone: "+1 800-981-5084"
   url: http://www.athenahealth.com/
   supervisor: Cameron King
   start_date: '2015-08-31'
@@ -217,7 +139,7 @@ experience:
   city: Austin
   state: Texas
   zip_code: '78731'
-  phone: 
+  phone:
   url: http://www.indeed.com/
   supervisor: Jason Koppe
   start_date: '2013-11-25'
@@ -267,7 +189,7 @@ experience:
   city: Austin
   state: Texas
   zip_code: '78727'
-  phone: "+1-512-372-8397"
+  phone: "+1 512-372-8397"
   url: http://www.schwab.com/
   supervisor: Irby Gaudet
   start_date: '2010-03-15'
@@ -298,7 +220,7 @@ experience:
   city: Austin
   state: Texas
   zip_code: '78759'
-  phone: "+1-888-811-3789"
+  phone: "+1 888-811-3789"
   url: http://www.renewdata.com/
   supervisor: Tony Colon
   start_date: '2009-10-15'
@@ -325,7 +247,7 @@ experience:
   city: Austin
   state: Texas
   zip_code: '78758'
-  phone: "+1-512-220-7414"
+  phone: "+1 512-220-7414"
   url: http://www.engauge.com/
   supervisor: Bob Elmer
   start_date: '2007-11-01'
@@ -367,7 +289,7 @@ experience:
   city: Austin
   state: Texas
   zip_code: '78746'
-  phone: "+1-512-330-9130"
+  phone: "+1 512-330-9130"
   url: http://www.winternals.com/
   supervisor: Matthew Bryce
   start_date: '2004-01-30'
@@ -396,15 +318,15 @@ experience:
   - Developed and implemented disaster recovery procedures.
   - Responded to system alerts 24 hours a day, 7 days a week.
   reason_for_leaving: Winternals was acquired by Microsoft.
-- tags: 
+- tags:
   title: Assistant Catastrophe Adjuster
   location: Norfolk, VA
   company: Martin Arguello
-  address: 
+  address:
   city: Norfolk
   state: Virginia
-  zip_code: 
-  phone: "+1-979-255-5003"
+  zip_code:
+  phone: "+1 979-255-5003"
   url: mailto:arguello@earthlink.net
   supervisor: Martin Arguello
   start_date: '2003-09-20'
@@ -419,7 +341,7 @@ experience:
   - Sketched roof, siding, and interior diagrams and measured damaged areas.
   - Performed the various office duties needed to close the policy holders' files.
   reason_for_leaving: Position was temporary.
-- tags: 
+- tags:
   title: CSD Network Tech/Specialist
   location: Round Rock, TX
   company: Dell Corporation
@@ -427,7 +349,7 @@ experience:
   city: Round Rock
   state: Texas
   zip_code: '78682'
-  phone: "+1-512-723-9134"
+  phone: "+1 512-723-9134"
   url: http://www.dell.com/
   supervisor: Tony Bass
   start_date: '2002-07-15'
@@ -441,7 +363,7 @@ experience:
   - Administered Dell's internal Precision Workstation website.
   reason_for_leaving: Dell offered me another, better phone support position, but
     I didn't want to be on the phones anymore.
-- tags: 
+- tags:
   title: Technical Support
   location: Bryan, TX
   company: DecisionOne
@@ -449,7 +371,7 @@ experience:
   city: Bryan
   state: Texas
   zip_code: '77802'
-  phone: "+1-979-774-2700"
+  phone: "+1 979-774-2700"
   url: http://www.decisionone.com/
   supervisor: Noel Templeton
   start_date: '2001-10-08'
@@ -461,15 +383,15 @@ experience:
   - Provided tech support for Covad DSL and T1 lines.
   - Performed customer service duties for both of the companies above.
   reason_for_leaving: Moved to Dallas.
-- tags: 
+- tags:
   title: Assistant Catastrophe Adjuster
   location: Omaha, NE
   company: Martin Arguello
-  address: 
+  address:
   city: Omaha
   state: Nebraska
-  zip_code: 
-  phone: "+1-979-255-5003"
+  zip_code:
+  phone: "+1 979-255-5003"
   url: mailto:arguello@earthlink.net
   supervisor: Martin Arguello
   start_date: '2001-04-23'
@@ -483,7 +405,7 @@ experience:
   - Sketched roof and siding diagrams and measure damaged areas.
   - Performed the various office duties needed to close the policy holders' files.
   reason_for_leaving: Position was temporary.
-- tags: 
+- tags:
   title: Consultant
   location: Madison, WI
   company: Exacta Corporation
@@ -491,7 +413,7 @@ experience:
   city: Madison
   state: Wisconsin
   zip_code: '53718'
-  phone: "+1-608-241-5100"
+  phone: "+1 608-241-5100"
   url: http://www.exactacorp.com/
   supervisor: Hank
   start_date: '2000-01-16'
@@ -509,7 +431,7 @@ experience:
     Company.
   - Performed various troubleshooting tasks on the SOC's LAN.
   reason_for_leaving: Moved back to Texas.
-- tags: 
+- tags:
   title: Technical Support
   location: San Antonio, TX
   company: Texas.Net
@@ -517,7 +439,7 @@ experience:
   city: San Antonio
   state: Texas
   zip_code: '78205'
-  phone: "+1-210-357-9200"
+  phone: "+1 210-357-9200"
   url: http://www.texas.net/
   supervisor: Tim Yaeger
   start_date: '1999-09-10'
@@ -528,7 +450,7 @@ experience:
   - Provided phone and e-mail tech support for dial-up and DSL connections.
   - Provided customer service for business and residential accounts.
   reason_for_leaving: Obtained a web programming position at Exacta.
-- tags: 
+- tags:
   title: Hardware Technician
   location: San Antonio, TX
   company: Amenity Computer Services
@@ -536,7 +458,7 @@ experience:
   city: San Antonio
   state: Texas
   zip_code: '78238'
-  phone: "+1-210-647-0125"
+  phone: "+1 210-647-0125"
   url: http://www.askacs.com/
   supervisor: Jeff Chamberlain
   start_date: '1999-07-06'
@@ -555,7 +477,7 @@ experience:
     in the wrong position, partially inserted cards, cables plugged in backwards,
     bent pins, etc. I got it working pretty quickly and he hired me on the spot.
   reason_for_leaving: Found a better position at Texas.Net.
-- tags: 
+- tags:
   title: Technical Support Volunteer
   location: Waco, TX
   company: TSTC Student Online Services
@@ -563,7 +485,7 @@ experience:
   city: Waco
   state: Texas
   zip_code: '76705'
-  phone: "+1-800-792-8784"
+  phone: "+1 800-792-8784"
   url: http://www.waco.tstc.edu/
   supervisor: Susan Meyers
   start_date: '1997'
@@ -577,7 +499,7 @@ experience:
   - Provided phone tech support for TSTC's online services.
   - Administered several web and file servers.
   reason_for_leaving: Wanted to take more classes.
-- tags: 
+- tags:
   title: Sandwich Artist
   location: College Station, TX
   company: Subway
@@ -585,7 +507,7 @@ experience:
   city: College Station
   state: Texas
   zip_code: '77840'
-  phone: "+1-979-764-8602"
+  phone: "+1 979-764-8602"
   url: http://www.subway.com/
   supervisor: Belinda
   start_date: '1997-07-15'
@@ -598,7 +520,7 @@ experience:
   - Cleaned.
   - Closed the store and completed inventory and safe-deposit paperwork.
   reason_for_leaving: Went back to college.
-- tags: 
+- tags:
   title: Express Associate
   location: Waco, TX
   company: Express Personnel Services
@@ -606,9 +528,9 @@ experience:
   city: Waco
   state: Texas
   zip_code: '76710'
-  phone: "+1-254-776-3302"
+  phone: "+1 254-776-3302"
   url: http://www.expresspersonnel.com/
-  supervisor: 
+  supervisor:
   start_date: '1996-11-01'
   end_date: '1996-11-30'
   starting_compensation: 2XpwFZ2XfmiBejJb0L6kgA==
@@ -617,7 +539,7 @@ experience:
   - Performed some simple assembly line work at a medical supplies factory.
   - Engaged in some outdoor manual labor at a sheetrock company.
   reason_for_leaving: They didn't provide enough jobs.
-- tags: 
+- tags:
   title: Maintenance Crew
   location: Bryan, TX
   company: 50 Off Store
@@ -625,8 +547,8 @@ experience:
   city: Bryan
   state: Texas
   zip_code: '77802'
-  phone: 
-  url: 
+  phone:
+  url:
   supervisor: Mr. Bush
   start_date: '1996-05-10'
   end_date: '1996-06-07'
@@ -638,7 +560,7 @@ experience:
   - Executed astounding janitorial feats on the store's lavatory.
   reason_for_leaving: Manager yelled at everyone all the time. Level of abuse far
     exceeded pay.
-- tags: 
+- tags:
   title: Sandwich Artist
   location: Bryan, TX
   company: Subway
@@ -646,7 +568,7 @@ experience:
   city: Bryan
   state: Texas
   zip_code: '77802'
-  phone: "+1-979-846-4972"
+  phone: "+1 979-846-4972"
   url: http://www.subway.com/
   supervisor: Candy
   start_date: '1996-02-15'
@@ -656,7 +578,7 @@ experience:
   description:
   - "(See the Subway entry above.)"
   reason_for_leaving: Left for college.
-- tags: 
+- tags:
   title: Customer Service Representative
   location: Bryan, TX
   company: McDonald's
@@ -664,7 +586,7 @@ experience:
   city: Bryan
   state: Texas
   zip_code: '77802'
-  phone: "+1-979-822-3011"
+  phone: "+1 979-822-3011"
   url: http://www.mcdonalds.com/
   supervisor: Sherry
   start_date: '1994-05-01'
@@ -694,7 +616,7 @@ education:
   city: Waco
   state: Texas
   zip_code: '76705'
-  phone: "+1-800-792-8784"
+  phone: "+1 800-792-8784"
   url: http://www.waco.tstc.edu/
   degree: Associate of Applied Science
   major: Computer Science Technology
@@ -709,7 +631,7 @@ education:
   city: College Station
   state: Texas
   zip_code: '77843'
-  phone: "+1-979-845-1003"
+  phone: "+1 979-845-1003"
   url: http://www.tamu.edu/
   degree: Incomplete
   major: Computer Science
@@ -724,10 +646,10 @@ education:
   city: Bryan
   state: Texas
   zip_code: '77802'
-  phone: "+1-979-731-7855"
+  phone: "+1 979-731-7855"
   url: http://www.bryanisd.org/school.asp?schoolID=9
   degree: High School Diploma
-  major: 
+  major:
   start_date: '1995'
   end_date: '1995'
   achievements:
@@ -741,10 +663,10 @@ education:
   city: Bryan
   state: Texas
   zip_code: '77802'
-  phone: "+1-979-731-7400"
+  phone: "+1 979-731-7400"
   url: http://www.ci.bryanisd.org/bryanhs/
   degree: Incomplete
-  major: 
+  major:
   start_date: '1991'
   end_date: '1995'
   achievements:
